# keywords

./: .gitignore  COPYRIGHT.txt  Cargo.toml  README.md  THIRD_PARTY_LICENSES.md  about.hbs  about.toml
src/: column_parquet_reader.rs  index_data.rs  keyword_shred.rs  lib.rs  main.rs
src/index_structure/: column_filter.rs  index_files.rs  mod.rs
src/keyword_shred/tests/: basic_tests.rs  column_mapping.rs  edge_cases_boundaries.rs  edge_cases_delimiters.rs  edge_cases_special.rs  mod.rs  parent_tracking.rs
src/searching/: keyword_search.rs  mod.rs  pruned_reader.rs  search_results.rs
src/searching/tests/: keyword_search_tests.rs  mod.rs  search_tests.rs
src/unit_tests/: comprehensive_test.rs  integration_tests.rs  mod.rs  performance_comparison_test.rs  performance_test.rs
src/utils/: column_pool.rs  file_interaction_local_and_cloud.rs  mod.rs
