[package]
name = "keywords"
version = "0.1.0"
edition = "2024"
authors = ["Andrew Smith"]
license-file = "COPYRIGHT.txt"
description = "Efficient keyword search for Parquet files. Copyright (c) 2025 Andrew Smith."
publish = false  # Don't accidentally publish proprietary code

[dependencies]
hashbrown = "0.16.0"
rkyv = { version = "0.8.12", features = ["bytecheck"] }
object_store = { version = "0.12.4", features = ["aws", "http"] }
parquet = { version = "57.0.0", features = ["arrow", "async", "object_store"] }
arrow = "57.0.0"
tokio = { version = "1.48.0", features = ["full"] }
url = "2.5.7"
bytes = "1.10.1"
indexmap = "2.12.0"
smallvec = "1.15.1"
rand = { version = "0.9.2", features = ["std"] }
dashmap = "6.1.0"
once_cell = "1.21.3"
futures = "0.3.31"
libc = "0.2.177"

# Optional: for better S3 configuration
[dependencies.aws-config]
version = "1.0"
optional = true

[dependencies.aws-credential-types]
version = "1.0"
optional = true

[features]
aws-advanced = ["aws-config", "aws-credential-types"]

[dev-dependencies]
tokio-test = "0.4.4"
datafusion = "50.3.0"

[profile.dev]
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

